manifests/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gen-algo-api
  # namespace: gen-algo
  labels:
    app: gen-algo-api
spec:
  type: NodePort
  selector:
    app: gen-algo-api
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30010
