manifests/base/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gen-algo-webui
  namespace: gen-algo
  labels:
    app: gen-algo-webui
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30011
  selector:
    app: gen-algo-webui
